--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 </head>
 <body>
     <main>
-        <nav>
+        <div class="nav_bar">
             <div class="logo">
                 <div class="logo_pic">
                     <img src=Pictures/logo-pic.jpg>
                 </div>
                 <h1>Anime Kaatūn Hub</h1>
             </div>
-            <ul>
-                <li>About Us</li>
-                <li>Services</li>
-                <li>Log In <i class="fas fa-user-circle"></i></li>
-                <li><button>Get Started</button></li>
-            </ul>
-        </nav>
+            <nav>
+                <a>About Us</a>
+                <a>Services</a>
+                <a>Log In <i class="fas fa-user-circle"></i></a>
+                <a>Get Started</a>   
+            </nav>
+        </div>
         <section class="top_section">
             <header>
                 <div class="intro_pic">
@@ -39,7 +39,7 @@
                     <p>
                         We are dedicated to excellence in every generation, shine and smile with us.
                     </p>
-                    <button>Get Started</button>
+                    <a>Get Started</a>
                 </div>
                 <form>
                     <p>Get a Free Estimate</p>
@@ -140,7 +140,7 @@
             <div class="contents">
                 <figure>
                     <div class="support">
-                        <img src="Pictures/service-cutomer-support_upscayl_4x_realesrgan-x4plus.png" loading="lazy">
+                        <img src="Pictures/service-cutomer-support_upscayl_4x_realesrgan-x4plus.png">
                     </div>
                     <figcaption>
                         Our customers get support for 24/7  &#128336;.
@@ -148,7 +148,7 @@
                 </figure>
                 <figure>
                     <div class="discount">
-                        <img src="Pictures/service-discount_upscayl_4x_realesrgan-x4plus.png" loading="lazy">
+                        <img src="Pictures/service-discount_upscayl_4x_realesrgan-x4plus.png">
                     </div>
                     <figcaption>
                         We provide discounts for our customers &#129303;.
@@ -156,7 +156,7 @@
                 </figure>
                 <figure>
                     <div class="funny">
-                        <img src="Pictures/service-funny-content_upscayl_4x_realesrgan-x4plus.png" loading="lazy">
+                        <img src="Pictures/service-funny-content_upscayl_4x_realesrgan-x4plus.png">
                     </div>
                     <figcaption>
                         We are always there to make your day funny &#128514;.
@@ -168,20 +168,21 @@
         <section class="features">
             <h1>Featuring With</h1>
             <div class="contents">
-                <div>
+                <div class="teletoon">
                     <img src="Pictures/feature-teletoon+_upscayl_4x_realesrgan-x4plus.png">
                 </div>
-                <div>
+                <div class="nickeledeon">
                     <img src="Pictures/feature-nickeledeon_upscayl_4x_realesrgan-x4plus.png">
                 </div>
-                <div>
+                <div class="disney">
                     <img src="Pictures/feature-disney_upscayl_4x_realesrgan-x4plus.png">
                 </div>
-                <div>
+                <div class="guilli">
                     <img src="Pictures/feature-guilli-africa_upscayl_4x_realesrgan-x4plus.png">
                 </div>
             </div>
         </section>
+        <div class="fill_space"></div>
         <section class="some_cartoons">
              <div class="header">
                 <h1><abbr title="Anime Kaatūn Hub">AKH</abbr> The World of Cartoons</h1>
@@ -191,7 +192,7 @@
                 </div>
              </div>           
             <div class="contents">
-                <figure class="dragon_ballz left">
+                <figure id="dragon_ballz_ID" class="dragon_ballz left">
                     <div>
                         <img src="Pictures/dragon-ballz-1.png">
                     </div>
@@ -199,7 +200,7 @@
                         DRAGON BALLZ
                     </figcaption>
                 </figure>
-                <figure class="dragon_ballz right">
+                <figure id="dragon_ballz_ID" class="dragon_ballz right">
                     <div>
                         <img src="Pictures/dragon-ballz-2.jpg">
                     </div>
@@ -207,7 +208,7 @@
                         DRAGON BALLZ 
                     </figcaption>
                 </figure>
-                <figure  class="nickylarson left">
+                <figure id="nickylarson_ID" class="nickylarson left">
                     <div>
                         <img src="Pictures/nickylarson-1.jpg">
                     </div>
@@ -215,7 +216,7 @@
                         NICKY LARSON
                     </figcaption>
                 </figure>
-                <figure class="nickylarson right">
+                <figure id="nickylarson_ID" class="nickylarson right">
                     <div>
                         <img src="Pictures/nickylarson-2.jpg">
                     </div>
@@ -223,7 +224,7 @@
                         NICKY LARSON
                     </figcaption>
                 </figure>
-                <figure class="naruto left">
+                <figure id="naruto_ID" class="naruto left">
                     <div>
                         <img src="Pictures/naruto-1.jpg">
                     </div>
@@ -231,7 +232,7 @@
                         NARUTO SHIPPUDEN
                     </figcaption>
                 </figure>
-                <figure class="naruto right">
+                <figure id="naruto_ID" class="naruto right">
                     <div>
                         <img src="Pictures/naruto-2.jpg">
                     </div>
@@ -239,7 +240,7 @@
                         NARUTO SHIPPUDEN
                     </figcaption>
                 </figure>
-                <figure class="kaeloo left">
+                <figure id="kaeloo_ID" class="kaeloo left">
                     <div>
                         <img src="Pictures/kaeloo-1_upscayl_4x_realesrgan-x4plus.png">
                     </div>
@@ -247,7 +248,7 @@
                         KAELOO
                     </figcaption>
                 </figure>
-                <figure class="kaeloo right">
+                <figure id="kaeloo_ID" class="kaeloo right">
                     <div>
                         <img src="Pictures/kaeloo-2_upscayl_4x_realesrgan-x4plus.png">
                     </div>
@@ -255,7 +256,7 @@
                         KAELOO
                     </figcaption>
                 </figure>
-                <figure class="kid left">
+                <figure id="kid_ID" class="kid left">
                     <div>
                         <img src="Pictures/kid-watching-cartoon-1_upscayl_4x_realesrgan-x4plus.png">
                     </div>
@@ -263,7 +264,7 @@
                         We got great animation showcase for you.
                     </figcaption>
                 </figure>
-                <figure class="kid right">
+                <figure id="kid_ID" class="kid right">
                     <div>
                         <img src="Pictures/kid-watching-cartoon-2_upscayl_4x_realesrgan-x4plus.png">
                     </div>
@@ -273,11 +274,11 @@
                 </figure>
             </div>
         </section>
+        <div class="fill_space two"></div>
         <section class="how_we_work">
             <div class="how_we_work_background">
                 <img src="Pictures/how-we-work_upscayl_4x_realesrgan-x4plus.png">
             </div>
-
             <div class="contents">
                 <h1>Let's do it!<br>💫</h1>
                 <div class="icons">
@@ -359,7 +360,7 @@
         </section>
         <section class="your_choice">
             <div class="image">
-                <img src="Pictures/manga-girl_upscayl_4x_realesrgan-x4plus.png" loading="lazy">
+                <img src="Pictures/manga-girl_upscayl_4x_realesrgan-x4plus.png">
             </div>
             <div class="contents">
                 <h1>Why to choose <abbr title="Anime Kaatūn Hub">AKH</abbr></h1>
@@ -373,7 +374,7 @@
             </div>
         </section>
         <div class="closing_image">
-            <img src="Pictures/last-pic-2_upscayl_4x_realesrgan-x4plus.png " loading="lazy">
+            <img src="Pictures/last-pic-2_upscayl_4x_realesrgan-x4plus.png ">
         </div>
         <footer>
             <div class="foot_content">
