--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
 </head>
 <body>
     <main>
-        <div class="nav_bar">
+        <div id="nav_bar_ID" class="nav_bar">
             <div class="logo">
                 <div class="logo_pic">
-                    <img src=Pictures/logo-pic.jpg>
+                    <img src=Pictures/logo-pic.jpg alt="AKH logo">
                 </div>
                 <h1>Anime Kaatūn Hub</h1>
             </div>
             <nav>
-                <a>About Us</a>
-                <a>Services</a>
-                <a>Log In <i class="fas fa-user-circle"></i></a>
-                <a>Get Started</a>   
+                <a href="#intro_text_ID">About Us</a>
+                <a href="#services_ID">Services</a>
+                <a href="#form_ID">Log In <i class="fas fa-user-circle"></i></a>
+                <a href="#footer_ID">Contact Us</a>   
             </nav>
         </div>
         <section class="top_section">
             <header>
                 <div class="intro_pic">
-                    <img src="Pictures/naruto-pic_upscayl_5x_realesrgan-x4plus.png">
+                    <img src="Pictures/naruto-pic_upscayl_5x_realesrgan-x4plus.png" alt="naruto_intro_pic">
                 </div>
-                <div class="intro_text">
+                <div id="intro_text_ID" class="intro_text">
                     <h1>Anime Kaatūn Hub (AKH)</h1>
                     <h1>High-quality content &</h1>
                     <h2>Explosive cartoon series.</h2>
                     <p>
-                        We are dedicated to excellence in every generation, shine and smile with us.
+                        Our dedication is to achieve greater excellence with each generation. Shine and smile with us.
                     </p>
-                    <a>Get Started</a>
+                    <a href="#form_ID">Get Started</a>
                 </div>
-                <form>
+                <form action="https://www.youtube.com/watch?v=VvlLuFsPl8A" method="post" id="form_ID">
                     <p>Get a Free Estimate</p>
                     <p>Contact Us</p>
                     <p>Click each of the field to edit it and put on your details</p>
@@ -118,7 +118,7 @@
                     <p>&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                     <h2>"A joy for kids"</h2>
                     <p>
-                        "Best website for cartoon content, my kids enjoy every one of them."
+                        "Best website for cartoon content, my kids enjoy each of your cartoons."
                     </p>
                     <p>Yemi Cheyenne<br>Nigeria-Abuja</p>
                 </article>
@@ -132,7 +132,7 @@
                 </article>
             </div>
         </section>
-        <section class="services">
+        <section id="services_ID" class="services">
             <div class="header">
                 <h1>For Anything You Need</h1><br>
                 <p>Get our stellar services</p>
@@ -140,7 +140,7 @@
             <div class="contents">
                 <figure>
                     <div class="support">
-                        <img src="Pictures/service-cutomer-support_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/service-cutomer-support_upscayl_4x_realesrgan-x4plus.png" alt="supporting agent">
                     </div>
                     <figcaption>
                         Our customers get support for 24/7  &#128336;.
@@ -148,7 +148,7 @@
                 </figure>
                 <figure>
                     <div class="discount">
-                        <img src="Pictures/service-discount_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/service-discount_upscayl_4x_realesrgan-x4plus.png" alt="discount agent">
                     </div>
                     <figcaption>
                         We provide discounts for our customers &#129303;.
@@ -156,29 +156,29 @@
                 </figure>
                 <figure>
                     <div class="funny">
-                        <img src="Pictures/service-funny-content_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/service-funny-content_upscayl_4x_realesrgan-x4plus.png" alt="funny meme">
                     </div>
                     <figcaption>
                         We are always there to make your day funny &#128514;.
                     </figcaption>
                 </figure>
             </div>
-            <button>Get Our All Services</button>
+            <a href="https://www.youtube.com/watch?v=ZwDP7BUNKW4" target="_blank">Get Our All Services</a>
         </section>
         <section class="features">
             <h1>Featuring With</h1>
             <div class="contents">
                 <div class="teletoon">
-                    <img src="Pictures/feature-teletoon+_upscayl_4x_realesrgan-x4plus.png">
-                </div>
+                    <img src="Pictures/feature-teletoon+_upscayl_4x_realesrgan-x4plus.png" alt="teletoon logo">
+                </div> 
                 <div class="nickeledeon">
-                    <img src="Pictures/feature-nickeledeon_upscayl_4x_realesrgan-x4plus.png">
+                    <img src="Pictures/feature-nickeledeon_upscayl_4x_realesrgan-x4plus.png" alt="nickeledeon logo">
                 </div>
                 <div class="disney">
-                    <img src="Pictures/feature-disney_upscayl_4x_realesrgan-x4plus.png">
+                    <img src="Pictures/feature-disney_upscayl_4x_realesrgan-x4plus.png" alt="disney logo">
                 </div>
                 <div class="guilli">
-                    <img src="Pictures/feature-guilli-africa_upscayl_4x_realesrgan-x4plus.png">
+                    <img src="Pictures/feature-guilli-africa_upscayl_4x_realesrgan-x4plus.png" alt="guilli logo">
                 </div>
             </div>
         </section>
@@ -194,7 +194,7 @@
             <div class="contents">
                 <figure id="dragon_ballz_ID" class="dragon_ballz left">
                     <div>
-                        <img src="Pictures/dragon-ballz-1.png">
+                        <img src="Pictures/dragon-ballz-1.png" alt="dragon ballz image">
                     </div>
                     <figcaption>
                         DRAGON BALLZ
@@ -202,7 +202,7 @@
                 </figure>
                 <figure id="dragon_ballz_ID" class="dragon_ballz right">
                     <div>
-                        <img src="Pictures/dragon-ballz-2.jpg">
+                        <img src="Pictures/dragon-ballz-2.jpg" alt="dragon ballz image">
                     </div>
                     <figcaption>
                         DRAGON BALLZ 
@@ -210,7 +210,7 @@
                 </figure>
                 <figure id="nickylarson_ID" class="nickylarson left">
                     <div>
-                        <img src="Pictures/nickylarson-1.jpg">
+                        <img src="Pictures/nickylarson-1.jpg" alt="nickylarson image">
                     </div>
                     <figcaption>
                         NICKY LARSON
@@ -218,7 +218,7 @@
                 </figure>
                 <figure id="nickylarson_ID" class="nickylarson right">
                     <div>
-                        <img src="Pictures/nickylarson-2.jpg">
+                        <img src="Pictures/nickylarson-2.jpg" alt="nickylarson image">
                     </div>
                     <figcaption>
                         NICKY LARSON
@@ -226,7 +226,7 @@
                 </figure>
                 <figure id="naruto_ID" class="naruto left">
                     <div>
-                        <img src="Pictures/naruto-1.jpg">
+                        <img src="Pictures/naruto-1.jpg" alt="naruto image">
                     </div>
                     <figcaption>
                         NARUTO SHIPPUDEN
@@ -234,7 +234,7 @@
                 </figure>
                 <figure id="naruto_ID" class="naruto right">
                     <div>
-                        <img src="Pictures/naruto-2.jpg">
+                        <img src="Pictures/naruto-2.jpg" alt="naruto image">
                     </div>
                     <figcaption>
                         NARUTO SHIPPUDEN
@@ -242,7 +242,7 @@
                 </figure>
                 <figure id="kaeloo_ID" class="kaeloo left">
                     <div>
-                        <img src="Pictures/kaeloo-1_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/kaeloo-1_upscayl_4x_realesrgan-x4plus.png" alt="kaeloo image">
                     </div>
                     <figcaption>
                         KAELOO
@@ -250,7 +250,7 @@
                 </figure>
                 <figure id="kaeloo_ID" class="kaeloo right">
                     <div>
-                        <img src="Pictures/kaeloo-2_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/kaeloo-2_upscayl_4x_realesrgan-x4plus.png" alt="kaeloo image">
                     </div>
                     <figcaption>
                         KAELOO
@@ -258,7 +258,7 @@
                 </figure>
                 <figure id="kid_ID" class="kid left">
                     <div>
-                        <img src="Pictures/kid-watching-cartoon-1_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/kid-watching-cartoon-1_upscayl_4x_realesrgan-x4plus.png" alt="kid image">
                     </div>
                     <figcaption>
                         We got great animation showcase for you.
@@ -266,7 +266,7 @@
                 </figure>
                 <figure id="kid_ID" class="kid right">
                     <div>
-                        <img src="Pictures/kid-watching-cartoon-2_upscayl_4x_realesrgan-x4plus.png">
+                        <img src="Pictures/kid-watching-cartoon-2_upscayl_4x_realesrgan-x4plus.png" alt="kid image">
                     </div>
                     <figcaption>
                         We got great animation showcase for you.
@@ -277,14 +277,14 @@
         <div class="fill_space two"></div>
         <section class="how_we_work">
             <div class="how_we_work_background">
-                <img src="Pictures/how-we-work_upscayl_4x_realesrgan-x4plus.png">
+                <img src="Pictures/how-we-work_upscayl_4x_realesrgan-x4plus.png" alt="cool manga image">
             </div>
             <div class="contents">
                 <h1>Let's do it!<br>💫</h1>
                 <div class="icons">
                     <figure>
                         <div>
-                            <img src="Pictures/key-icon.png">
+                            <img src="Pictures/key-icon.png" alt="key icon">
                         </div>
                         <figcaption>
                             Get started and unlock our proffessional services.
@@ -298,7 +298,7 @@
                     </div>
                     <figure>
                         <div>
-                            <img src="Pictures/subscribe-icon.png">
+                            <img src="Pictures/subscribe-icon.png" alt="Subscribe icon">
                         </div>
                         <figcaption>
                             Subscribe and receive our fresh exciting updates 📩.
@@ -312,7 +312,7 @@
                     </div>
                     <figure>
                         <div>
-                            <img src="Pictures/donate-icon.png">
+                            <img src="Pictures/donate-icon.png" alt="donate icon">
                         </div>
                         <figcaption>
                             Donate today to fuel our creativity for more amazing content.
@@ -326,7 +326,7 @@
                     </div>
                     <figure>
                         <div>
-                            <img src="Pictures/community-icon.png">
+                            <img src="Pictures/community-icon.png" alt="community icon">
                         </div>
                         <figcaption>
                             Together, we can create a warm and ever growing family.
@@ -339,7 +339,7 @@
             <div class="header">
                 <h1>Our Plans &<br>Special Discounts</h1>
                 <p>We always value our cartoon fans. That's why we are soon partnering with NETFLIX!<br>Register on AKH and get a 30% discount to watch cartoons on NETFLIX!</p>
-                <button>Subscribe Now</button>
+                <a href="https://www.youtube.com/watch?v=VvlLuFsPl8A" target="_blank">Subscribe Now</a>
             </div>
             <div class="card">
                 <div class="upper">
@@ -347,7 +347,7 @@
                     <p>The Plan</p>
                     <p>30% &dollar; Discount</p>
                     <p>Just for our customers</p>
-                    <button>Subscribe Now</button>
+                    <a href="https://www.youtube.com/watch?v=VvlLuFsPl8A" target="_blank">Subscribe Now</a>
                 </div>
                 <ul>
                     <li>&#8594; Spreading Love  </li>
@@ -360,7 +360,7 @@
         </section>
         <section class="your_choice">
             <div class="image">
-                <img src="Pictures/manga-girl_upscayl_4x_realesrgan-x4plus.png">
+                <img src="Pictures/manga-girl_upscayl_4x_realesrgan-x4plus.png" class="manga girl listening music">
             </div>
             <div class="contents">
                 <h1>Why to choose <abbr title="Anime Kaatūn Hub">AKH</abbr></h1>
@@ -370,17 +370,17 @@
                     <li><p class="title">&#9733;Affordable Pricing</p><br><p>High-quality content at a price that won't break the bank.</p></li>
                     <li><p class="title">&#9733;Engaging Content</p><br><p>We provide content that is both entertaining and informative.</p></li>
                 </ul>
-                <button>Get to know about us</button>
+                <a href="https://www.youtube.com/watch?v=ZwDP7BUNKW4" target="_blank">Get to know more about us</a>
             </div>
         </section>
         <div class="closing_image">
-            <img src="Pictures/last-pic-2_upscayl_4x_realesrgan-x4plus.png ">
+            <img src="Pictures/last-pic-2_upscayl_4x_realesrgan-x4plus.png " class="a meditating manga">
         </div>
-        <footer>
+        <footer id="footer_ID">
             <div class="foot_content">
                 <div class="page_invitation">
                     <h1>Anime Kaatūn Hub</h1>
-                    <button>Get Started</button>
+                    <a href="#form_ID">Get Started</a>
                 </div>
                 <address>
                     <h1>Contact Us</h1>
@@ -392,16 +392,17 @@
                 <div class="social_medias">
                     <h1>Follow us<br>on our Social Medias</h1>
                     <div>
-                        <a><i class="fab fa-whatsapp"></i></a>
-                        <a><i class="fab fa-facebook"></i></a>
-                        <a><i class="fab fa-instagram"></i></a>
-                        <a><i class="fab fa-github"></i></a>
-                        <a><i class="fa fa-envelope"></i></a>
+                        <a href="https://wa.me/250780270994" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.facebook.com/ben.ink.02/" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/b.e.n.thg/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/Ben22-Dev" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="//mail.google.com/" target="_blank"><i class="fa fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
             <div class="copyright">
                 <p>&copy;Anime Kaatūn Hub by Ben22-Dev</p>
+                <a href="#intro_text_ID">Back To Top</a>
             </div>
         </footer>
     </main>
