--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="contents">
                 <figure>
                     <div class="support">
-                        <img src="Pictures/service-cutomer-support_upscayl_4x_realesrgan-x4plus.png" alt="supporting agent">
+                        <img src="Pictures/service-cutomer-support_upscayl_4x_realesrgan-x4plus.png" alt="supporting_agent">
                     </div>
                     <figcaption>
                         Our customers get support for 24/7  &#128336;.
@@ -148,7 +148,7 @@
                 </figure>
                 <figure>
                     <div class="discount">
-                        <img src="Pictures/service-discount_upscayl_4x_realesrgan-x4plus.png" alt="discount agent">
+                        <img src="Pictures/service-discount_upscayl_4x_realesrgan-x4plus.png" alt="discount_agent">
                     </div>
                     <figcaption>
                         We provide discounts for our customers &#129303;.
@@ -156,7 +156,7 @@
                 </figure>
                 <figure>
                     <div class="funny">
-                        <img src="Pictures/service-funny-content_upscayl_4x_realesrgan-x4plus.png" alt="funny meme">
+                        <img src="Pictures/service-funny-content_upscayl_4x_realesrgan-x4plus.png" alt="funny_meme">
                     </div>
                     <figcaption>
                         We are always there to make your day funny &#128514;.
@@ -188,7 +188,7 @@
                 <h1><abbr title="Anime Kaatūn Hub">AKH</abbr> The World of Cartoons</h1>
                 <p>Get ready of enormous excitement if you dare to watch</p>
                 <div>
-                    <img src="Pictures/cartoon emoji.png">
+                    <img src="Pictures/cartoon emoji.png" alt="amazing emoji">
                 </div>
              </div>           
             <div class="contents">
@@ -360,7 +360,7 @@
         </section>
         <section class="your_choice">
             <div class="image">
-                <img src="Pictures/manga-girl_upscayl_4x_realesrgan-x4plus.png" class="manga girl listening music">
+                <img src="Pictures/manga-girl_upscayl_4x_realesrgan-x4plus.png" alt="manga girl listening music">
             </div>
             <div class="contents">
                 <h1>Why to choose <abbr title="Anime Kaatūn Hub">AKH</abbr></h1>
@@ -374,7 +374,7 @@
             </div>
         </section>
         <div class="closing_image">
-            <img src="Pictures/last-pic-2_upscayl_4x_realesrgan-x4plus.png " class="a meditating manga">
+            <img src="Pictures/last-pic-2_upscayl_4x_realesrgan-x4plus.png " alt="a_meditating_manga">
         </div>
         <footer id="footer_ID">
             <div class="foot_content">
