--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <main>
-        <div id="nav_bar_ID" class="nav_bar">
+        <div id="nav_bar_ID" class="top_bar">
             <div class="logo">
                 <div class="logo_pic">
                     <img src=Pictures/logo-pic.jpg alt="AKH logo">
@@ -276,9 +276,6 @@
         </section>
         <div class="fill_space two"></div>
         <section class="how_we_work">
-            <div class="how_we_work_background">
-                <img src="Pictures/how-we-work_upscayl_4x_realesrgan-x4plus.png" alt="cool manga image">
-            </div>
             <div class="contents">
                 <h1>Let's do it!<br>💫</h1>
                 <div class="icons">
